--- a/index.html
+++ b/index.html
@@ -1,150 +1,232 @@
 <!DOCTYPE html>
 <html lang="kn">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DI App TV — Kannada Channels</title>
-  <meta name="description" content="DI App TV - Kannada live channels. Stream, search and favourite your channels." />
-  <style>
-    :root{
-      --bg:#0f1724;--card:#0b1220;--muted:#9aa4b2;--accent:#ff6b35;--radius:12px;
-      font-family: Inter, "Noto Sans Kannada", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,var(--bg),#07101a 120%);color:#e6eef6;min-height:100vh;}
-    header{display:flex;align-items:center;justify-content:space-between;padding:16px 20px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:46px;height:46px;background:linear-gradient(135deg,#ff9b5c,#ff6b35);border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700;color:#07101a}
-    .title{font-size:18px;font-weight:700}
-    .subtitle{font-size:12px;color:var(--muted)}
-    .controls{display:flex;gap:10px;align-items:center}
-    .search{background:var(--card);border-radius:999px;padding:8px 12px;display:flex;align-items:center;gap:8px}
-    .search input{background:transparent;border:0;outline:0;color:inherit;width:220px}
-    .btn{background:var(--accent);border-radius:10px;padding:8px 12px;color:#07101a;font-weight:600;border:0;cursor:pointer}
-    .container{display:grid;grid-template-columns:340px 1fr;gap:20px;padding:20px;max-width:1200px;margin:auto}
-    .sidebar{background:rgba(255,255,255,0.03);padding:18px;border-radius:var(--radius)}
-    .channel-list{display:flex;flex-direction:column;gap:8px;max-height:65vh;overflow:auto}
-    .channel-item{display:flex;gap:10px;align-items:center;padding:8px;border-radius:10px;cursor:pointer}
-    .channel-item:hover{background:rgba(255,255,255,0.05)}
-    .thumb{width:56px;height:36px;border-radius:6px;background:#122232;display:flex;align-items:center;justify-content:center;font-size:12px;color:var(--muted)}
-    .main{display:flex;flex-direction:column;gap:14px}
-    video{width:100%;height:420px;background:black;border-radius:8px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:14px}
-    .card{background:var(--card);padding:12px;border-radius:12px}
-    .card .ch-thumb{height:110px;border-radius:8px;background:#08161f;display:flex;align-items:center;justify-content:center}
-    .card h4{margin:8px 0 4px;font-size:15px}
-    .card p{margin:0;font-size:13px;color:var(--muted)}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>DI App TV</title>
+<style>
+:root {
+  --bg:#0f1724; --card:#0b1220; --text:#e6eef6;
+  --muted:#9aa4b2; --accent:#ff6b35; --radius:12px;
+  font-family:Inter,"Noto Sans Kannada",system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
+}
+[data-theme="light"] {
+  --bg:#f7f7f9; --card:#ffffff; --text:#111; --muted:#555; --accent:#ff6b35;
+}
+*{box-sizing:border-box}
+body{margin:0;background:var(--bg);color:var(--text);min-height:100vh;transition:background .3s,color .3s;}
+header{display:flex;align-items:center;justify-content:space-between;padding:16px 20px;flex-wrap:wrap;gap:12px;background:var(--card);box-shadow:0 2px 5px rgba(0,0,0,.2);}
+.brand{display:flex;align-items:center;gap:12px}
+.logo{width:46px;height:46px;background:linear-gradient(135deg,#ff9b5c,#ff6b35);border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700;color:#07101a;}
+.title{font-size:18px;font-weight:700}
+.subtitle{font-size:12px;color:var(--muted)}
+.controls{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+.search{background:var(--card);border:1px solid rgba(255,255,255,.1);border-radius:999px;padding:8px 12px;display:flex;align-items:center;gap:8px;flex:1;}
+.search input{background:transparent;border:0;outline:0;color:inherit;width:100%;min-width:140px;}
+.btn{background:var(--accent);border-radius:10px;padding:8px 12px;color:#07101a;font-weight:600;border:0;cursor:pointer;}
+.toggle-btn{background:var(--card);border:1px solid rgba(255,255,255,.2);border-radius:8px;padding:8px 12px;cursor:pointer;color:var(--text);}
+.tab-bar{display:flex;gap:10px;justify-content:center;background:rgba(255,255,255,.05);padding:10px;}
+.tab-btn{background:var(--card);border:0;color:var(--text);padding:6px 16px;border-radius:20px;cursor:pointer;font-size:14px;}
+.tab-btn.active{background:var(--accent);color:#07101a;font-weight:600}
+.lang-bar,.cat-bar{display:flex;overflow-x:auto;gap:8px;padding:8px 16px;background:rgba(255,255,255,.05);white-space:nowrap;}
+.lang-btn,.cat-btn{background:var(--card);border:0;color:var(--text);padding:6px 10px;border-radius:20px;cursor:pointer;font-size:13px;flex-shrink:0;}
+.lang-btn.active,.cat-btn.active{background:var(--accent);color:#07101a;font-weight:600}
+.container{display:grid;grid-template-columns:1fr 300px;gap:20px;padding:20px;max-width:1200px;margin:auto;}
+.sidebar{background:rgba(255,255,255,.03);padding:18px;border-radius:var(--radius);}
+.channel-list{display:flex;flex-direction:column;gap:8px;max-height:65vh;overflow:auto;}
+.channel-item{display:flex;gap:10px;align-items:center;padding:8px;border-radius:10px;cursor:pointer;}
+.channel-item:hover{background:rgba(255,255,255,.08)}
+.thumb{width:56px;height:36px;border-radius:6px;background:#122232;display:flex;align-items:center;justify-content:center;font-size:12px;color:var(--muted);overflow:hidden;}
+.main{display:flex;flex-direction:column;gap:14px;position:relative}
+video{width:100%;height:420px;background:black;border-radius:8px;}
+.mini-player{position:fixed!important;width:280px!important;height:160px!important;bottom:15px;right:15px;z-index:999;box-shadow:0 0 10px rgba(0,0,0,.8);border-radius:8px;}
+#close-mini{position:absolute;top:5px;right:10px;background:rgba(255,255,255,.2);border:none;color:#fff;font-size:16px;cursor:pointer;display:none;}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:14px;}
+.card{background:var(--card);padding:12px;border-radius:12px;cursor:pointer;transition:transform .2s ease;}
+.card:hover{transform:scale(1.03)}
+.card .ch-thumb{height:110px;border-radius:8px;background:#08161f;display:flex;align-items:center;justify-content:center;overflow:hidden;}
+.card h4{margin:8px 0 4px;font-size:15px}
+.card p{margin:0;font-size:13px;color:var(--muted)}
+@media (max-width:768px){.container{grid-template-columns:1fr}video{height:240px}.sidebar{order:2;max-height:250px;overflow:auto}}
+</style>
 </head>
-<body>
-  <header>
-    <div class="brand">
-      <div class="logo">DI</div>
-      <div>
-        <div class="title">DI App TV</div>
-        <div class="subtitle">ಕನ್ನಡ ನೇರ ಪ್ರಸಾರ</div>
-      </div>
+<body data-theme="dark">
+<header>
+  <div class="brand">
+    <div class="logo">DI</div>
+    <div><div class="title">DI APP TV</div><div class="subtitle">Live Channels</div></div>
+  </div>
+  <div class="controls">
+    <div class="search"><input id="search" placeholder="Search channel"></div>
+    <button class="btn" id="refresh">Refresh</button>
+    <button class="toggle-btn" id="themeToggle">🌙</button>
+  </div>
+</header>
+
+<div class="tab-bar">
+  <button class="tab-btn active" id="tabLang">By Language</button>
+  <button class="tab-btn" id="tabCat">By Category</button>
+</div>
+
+<div class="lang-bar" id="langBar"></div>
+<div class="cat-bar" id="catBar" style="display:none"></div>
+
+<main class="container">
+  <section class="main">
+    <div id="player-container">
+      <button id="close-mini">✖</button>
+      <video id="player" controls autoplay playsinline webkit-playsinline></video>
     </div>
-    <div class="controls">
-      <div class="search">
-        <input id="search" placeholder="ಚಾನೆಲ್ ಹುಡುಕಿ" />
-      </div>
-      <button class="btn" id="refresh">Refresh</button>
-    </div>
-  </header>
+    <h3 id="nowPlaying">No channel selected</h3>
+    <div id="grid" class="grid"></div>
+  </section>
 
-  <main class="container">
-    <aside class="sidebar">
-      <h4 style="margin-top:0;color:var(--muted)">ಚಾನೆಲ್ ಪಟ್ಟಿ</h4>
-      <div id="channelList" class="channel-list"></div>
-    </aside>
+  <aside class="sidebar">
+    <h4 style="margin-top:0;color:var(--muted)">Channel List</h4>
+    <div id="channelList" class="channel-list"></div>
+  </aside>
+</main>
 
-    <section class="main">
-      <video id="player" controls poster="">
-        <source id="playerSource" type="application/vnd.apple.mpegurl" />
-      </video>
-      <h3 id="nowPlaying">ಚಾನೆಲ್ ಆಯ್ಕೆ ಮಾಡಿಲ್ಲ</h3>
-      <div id="grid" class="grid"></div>
-    </section>
-  </main>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<script>
+const LANGUAGES=[{code:'hin',name:'Hindi'},{code:'tam',name:'Tamil'},{code:'tel',name:'Telugu'},
+{code:'mal',name:'Malayalam'},{code:'kan',name:'Kannada'},{code:'mar',name:'Marathi'},
+{code:'ben',name:'Bengali'},{code:'pan',name:'Punjabi'},{code:'guj',name:'Gujarati'},
+{code:'ban',name:'Bangla'},{code:'ori',name:'Oriya'},{code:'sin',name:'Sinhala'},
+{code:'eng',name:'English'},{code:'bho',name:'Bhojpuri'},{code:'nep',name:'Nepali'},
+{code:'urd',name:'Urdu'},{code:'other',name:'Other'}];
 
-  <script>
-    const M3U_URL = 'https://iptv-org.github.io/iptv/languages/kan.m3u';
-    const listEl = document.getElementById('channelList');
-    const gridEl = document.getElementById('grid');
-    const player = document.getElementById('player');
-    const playerSource = document.getElementById('playerSource');
-    const nowPlaying = document.getElementById('nowPlaying');
+const CATEGORIES=['animation','auto','business','classic','comedy','cooking','culture','documentary',
+'education','entertainment','family','general','interactive','kids','legislative',
+'lifestyle','movies','music','news','outdoor','public','relax','religious','science',
+'series','shop','sports','travel','weather'];
 
-    async function fetchChannels(){
-      listEl.innerHTML = '<div>Loading Kannada channels...</div>';
-      try{
-        const res = await fetch(M3U_URL);
-        const text = await res.text();
-        const channels = parseM3U(text);
-        renderChannels(channels);
-      }catch(e){
-        listEl.innerHTML = '<div style="color:red">Failed to load playlist.</div>';
-      }
+let mode='language',currentLang='kan',currentCat='news',allChannels=[],isMini=false;
+const listEl=document.getElementById('channelList');
+const gridEl=document.getElementById('grid');
+const player=document.getElementById('player');
+const nowPlaying=document.getElementById('nowPlaying');
+const langBar=document.getElementById('langBar');
+const catBar=document.getElementById('catBar');
+const playerContainer=document.getElementById('player-container');
+const closeMini=document.getElementById('close-mini');
+
+function renderLangBar(){
+ LANGUAGES.forEach(l=>{
+   const btn=document.createElement('button');
+   btn.className='lang-btn';
+   btn.textContent=l.name;
+   btn.addEventListener('click',()=>{document.querySelectorAll('.lang-btn').forEach(b=>b.classList.remove('active'));btn.classList.add('active');currentLang=l.code;fetchChannels();});
+   if(l.code==='kan')btn.classList.add('active');
+   langBar.appendChild(btn);
+ });
+}
+function renderCatBar(){
+ CATEGORIES.forEach(c=>{
+   const btn=document.createElement('button');
+   btn.className='cat-btn';
+   btn.textContent=c.charAt(0).toUpperCase()+c.slice(1);
+   btn.addEventListener('click',()=>{document.querySelectorAll('.cat-btn').forEach(b=>b.classList.remove('active'));btn.classList.add('active');currentCat=c;fetchChannels();});
+   if(c==='news')btn.classList.add('active');
+   catBar.appendChild(btn);
+ });
+}
+
+async function fetchChannels(){
+ listEl.innerHTML='<div>Loading channels...</div>';
+ const baseURL = mode==='language'
+   ? 'https://iptv-org.github.io/iptv/languages/'+currentLang+'.m3u'
+   : 'https://iptv-org.github.io/iptv/categories/'+currentCat+'.m3u';
+ try{
+   const res=await fetch(baseURL);
+   const text=await res.text();
+   const ch=parseM3U(text);
+   allChannels=ch.filter(x=>x.src.startsWith('http'));
+   renderChannels(allChannels);
+ }catch(e){
+   listEl.innerHTML='<div style="color:red">Failed to load playlist.</div>';
+ }
+}
+
+// parse M3U
+function parseM3U(data){
+  const lines=data.split(/\n/);
+  const ch=[];let cur={};let index=1;
+  for(let line of lines){
+    line=line.trim();
+    if(line.startsWith('#EXTINF')){
+      let name=(line.match(/tvg-name="(.*?)"/)||[])[1];
+      if(!name) name=(line.match(/,(.*)$/)||['',''])[1].trim();
+      if(!name) name=`Channel ${index}`;
+      const logo=(line.match(/tvg-logo="(.*?)"/)||['',''])[1];
+      cur={title:name,logo:logo};
+    }else if(line.startsWith('http')){
+      cur.src=line.trim();ch.push(cur);cur={};index++;
     }
+  }
+  return ch;
+}
 
-    function parseM3U(data){
-      const lines = data.split(/\n/);
-      const channels = [];
-      let current = {};
-      for(let line of lines){
-        if(line.startsWith('#EXTINF')){
-          const nameMatch = line.match(/,(.*)$/);
-          const name = nameMatch ? nameMatch[1].trim() : 'Unknown';
-          const logoMatch = line.match(/tvg-logo="(.*?)"/);
-          const logo = logoMatch ? logoMatch[1] : '';
-          current = {title:name,logo:logo};
-        }else if(line.startsWith('http')){
-          current.src = line.trim();
-          channels.push(current);
-          current = {};
-        }
-      }
-      return channels;
-    }
+function renderChannels(ch){
+ listEl.innerHTML='';gridEl.innerHTML='';
+ ch.forEach(c=>{
+   const item=document.createElement('div');item.className='channel-item';
+   item.innerHTML=`<div class='thumb'>${c.logo?`<img src='${c.logo}' style='width:100%;height:100%;object-fit:cover;border-radius:6px'/>`:c.title[0]}</div><div>${c.title}</div>`;
+   item.onclick=()=>playChannel(c);listEl.appendChild(item);
+   const card=document.createElement('div');card.className='card';
+   card.innerHTML=`<div class='ch-thumb'>${c.logo?`<img src='${c.logo}' style='width:100%;height:100%;object-fit:cover;border-radius:6px'/>`:c.title}</div><h4>${c.title}</h4>`;
+   card.onclick=()=>playChannel(c);gridEl.appendChild(card);
+ });
+}
 
-    function renderChannels(channels){
-      listEl.innerHTML = '';
-      gridEl.innerHTML = '';
-      channels.forEach(ch=>{
-        const item = document.createElement('div');
-        item.className = 'channel-item';
-        item.innerHTML = `<div class='thumb'>${ch.logo?`<img src='${ch.logo}' style='width:100%;height:100%;object-fit:cover;border-radius:6px'/>`:ch.title[0]}</div><div>${ch.title}</div>`;
-        item.addEventListener('click',()=>playChannel(ch));
-        listEl.appendChild(item);
-        const card = document.createElement('div');
-        card.className='card';
-        card.innerHTML = `<div class='ch-thumb'>${ch.logo?`<img src='${ch.logo}' style='width:100%;height:100%;object-fit:cover;border-radius:6px'/>`:ch.title}</div><h4>${ch.title}</h4>`;
-        card.addEventListener('click',()=>playChannel(ch));
-        gridEl.appendChild(card);
-      });
-    }
+function playChannel(ch){
+ nowPlaying.textContent=ch.title;
+ if(Hls.isSupported()){
+   const hls=new Hls();
+   hls.loadSource(ch.src);
+   hls.attachMedia(player);
+   hls.on(Hls.Events.MANIFEST_PARSED,()=>player.play());
+ }else{
+   player.src=ch.src; // fallback for mobile apps & browsers
+   player.load();
+   player.play().catch(()=>console.log('Playback requires user interaction'));
+ }
+ window.scrollTo({top:0,behavior:'smooth'});
+}
 
-    function playChannel(ch){
-      playerSource.src = ch.src;
-      player.load();
-      player.play().catch(()=>{});
-      nowPlaying.textContent = ch.title;
-    }
+// Mini player
+window.addEventListener('scroll',()=>{
+ const rect=playerContainer.getBoundingClientRect();
+ if(rect.bottom<0&&!isMini){player.classList.add('mini-player');closeMini.style.display='block';isMini=true;}
+ else if(rect.bottom>=0&&isMini){player.classList.remove('mini-player');closeMini.style.display='none';isMini=false;}
+});
+closeMini.addEventListener('click',()=>{player.pause();player.classList.remove('mini-player');closeMini.style.display='none';});
 
-    document.getElementById('search').addEventListener('input', e=>{
-      const val = e.target.value.toLowerCase();
-      document.querySelectorAll('.channel-item').forEach(el=>{
-        el.style.display = el.textContent.toLowerCase().includes(val)?'flex':'none';
-      });
-      document.querySelectorAll('.card').forEach(el=>{
-        el.style.display = el.textContent.toLowerCase().includes(val)?'block':'none';
-      });
-    });
+// Search
+document.getElementById('search').addEventListener('input',e=>{
+ const val=e.target.value.toLowerCase();
+ document.querySelectorAll('.channel-item').forEach(el=>{el.style.display=el.textContent.toLowerCase().includes(val)?'flex':'none';});
+ document.querySelectorAll('.card').forEach(el=>{el.style.display=el.textContent.toLowerCase().includes(val)?'block':'none';});
+});
 
-    document.getElementById('refresh').addEventListener('click', fetchChannels);
+// Refresh
+document.getElementById('refresh').addEventListener('click',fetchChannels);
 
-    fetchChannels();
-  </script>
+// Theme toggle
+const themeToggle=document.getElementById('themeToggle');
+themeToggle.addEventListener('click',()=>{const dark=document.body.dataset.theme==='dark';document.body.dataset.theme=dark?'light':'dark';themeToggle.textContent=dark?'☀️':'🌙';});
+
+// Tabs
+document.getElementById('tabLang').addEventListener('click',()=>{
+ mode='language';document.getElementById('tabLang').classList.add('active');document.getElementById('tabCat').classList.remove('active');langBar.style.display='flex';catBar.style.display='none';fetchChannels();
+});
+document.getElementById('tabCat').addEventListener('click',()=>{
+ mode='category';document.getElementById('tabCat').classList.add('active');document.getElementById('tabLang').classList.remove('active');catBar.style.display='flex';langBar.style.display='none';fetchChannels();
+});
+
+renderLangBar();
+renderCatBar();
+fetchChannels();
+</script>
 </body>
 </html>
