--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ video{
         <button class="highlight-btn" data-url="http://awaazindia.livebox.co.in/AwaazIndaTVhls/Live.m3u8">Awaz India</button>
         <button class="highlight-btn" data-url="https://ndtvindiaelemarchana.akamaized.net/hls/live/2003679/ndtvindia/master.m3u8">NDTV India</button>
         <button class="highlight-btn" data-url="https://d35j504z0x2vu2.cloudfront.net/v1/manifest/0bc8e8376bd8417a1b6761138aa41c26c7309312/9xm/23886666-8fc5-470f-aab1-bd637ed607b1/3.m3u8">9XM</button>
-        <button class="highlight-btn" data-url="https://raj.stream/live.m3u8">Raj Music</button>
+        <button class="highlight-btn" data-url="https:\\d3eyhgoylams0m.cloudfront.net\v1\manifest\93ce20f0f52760bf38be911ff4c91ed02aa2fd92\ed7bd2c7-8d10-4051-b397-2f6b90f99acb\3829f99b-4951-4a9d-98c1-dbc3acfe5193\2.m3u8">Chandana</button>
         <button class="highlight-btn" data-url="https://dyjmyiv3bp2ez.cloudfront.net/pub-iotv9kanmo6oiq/liveabr/playlist.m3u8">TV9</button>
         <button class="highlight-btn" data-url="https://aasthaott.akamaized.net/110923/smil:aasthakannada.smil/playlist.m3u8">Aastha Kannada</button>
       </div>
